[project]
name = "smalldiffusion"
version = "0.4.2"
description = "A minimal but functional implementation of diffusion model training and sampling"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Chenyang Yuan", email = "yuanchenyang@gmail.com" }
]
maintainers = [
  {name = "Chenyang Yuan", email = "yuanchenyang@gmail.com" }
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",

  "Operating System :: OS Independent",
]

dependencies = [
  "accelerate",
  "numpy",
  "torchvision",
  "torch",
  "tqdm",
  "einops",
]

[project.urls]
"Homepage" = "https://github.com/yuanchenyang/smalldiffusion"
"Bug Tracker" = "https://github.com/yuanchenyang/smalldiffusion/issues"
"Documentation" = "https://github.com/yuanchenyang/smalldiffusion"
"Source" = "https://github.com/yuanchenyang/smalldiffusion"

[project.optional-dependencies] # Optional
dev = ["build", "twine"]
test = ["pytest", "diffusers==0.27.2"]
examples = [
  "einops",
  "diffusers",
  "transformers",
  "datasets",
  "jupyter",
  "matplotlib",
  "torch_ema",
]

[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
markers = [
    "run_slow: mark tests as slow, skip unless --run_slow flag is passed",
    "serial",
]